--- a/src/config/locale/messages/zh/pages/index.json
+++ b/src/config/locale/messages/zh/pages/index.json
@@ -85,7 +85,7 @@
             ],
             "button": {
                 "title": "AI 视频生成器",
-                "url": "/ai-video-generator"
+                "url": "/video-effects"
             },
             "logos": [
                 "/imgs/logos/pollo.svg", "/imgs/logos/kling.svg", "/imgs/logos/veo.svg", "/imgs/logos/sora.svg", "/imgs/logos/runway.svg"
@@ -101,7 +101,7 @@
             ],
             "button": {
                 "title": "AI 图像生成器",
-                "url": "/ai-image-generator"
+                "url": "/photo-effects"
             },
             "logos": [
                 "/imgs/logos/midjourney.svg", "/imgs/logos/flux.svg", "/imgs/logos/gpt4.svg", "/imgs/logos/imagen.svg"
@@ -208,7 +208,7 @@
             ],
             "button": {
               "title": "尝试 AI 图像生成器",
-              "url": "/ai-image-generator"
+              "url": "/photo-effects"
             },
             "image": {
               "src": "/imgs/image.png",
@@ -226,7 +226,7 @@
             ],
             "button": {
               "title": "尝试 AI 视频生成器",
-              "url": "/ai-video-generator"
+              "url": "/video-effects"
             },
             "image": {
               "src": "/videos/AI_Kissing.mp4",
@@ -254,97 +254,112 @@
                 "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_1.png", "alt": "AI 接吻" },
                 "video": "/videos/AI_Kissing.mp4",
                 "badge": "HOT",
-                "count": "3M"
+                "count": "3M",
+                "url": "/video-effects/ai-kissing?type=Romantic"
               },
               {
                 "title": "AI 肌肉生成器",
                 "image": { "src": "/imgs/cms/Muscle_肌肉展示_1.png", "alt": "AI 肌肉" },
                 "video": "/videos/肌肉展示.mp4",
                 "badge": "HOT",
-                "count": "149.4K"
+                "count": "149.4K",
+                "url": "/video-effects/ai-muscle?type=Bodybuilder"
               },
               {
                 "title": "AI 肚皮舞",
                 "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_1.png", "alt": "AI 肚皮舞" },
                 "video": "/videos/肚皮舞.mp4",
                 "badge": "HOT",
-                "count": "127.1K"
+                "count": "127.1K",
+                "url": "/video-effects/ai-dance-pop"
               },
               {
                 "title": "AI 身体抖动特效",
                 "image": { "src": "/imgs/cms/Jiggle_抖动身体_1.png", "alt": "AI 抖动" },
                 "video": "/videos/抖动身体.mp4",
                 "badge": "HOT",
-                "count": "73.9K"
+                "count": "73.9K",
+                "url": "/video-effects/ai-jiggle?type=Fun"
               },
               {
                 "title": "AI 电臀舞",
                 "image": { "src": "/imgs/cms/Twerk_扭臀舞_1.png", "alt": "AI 电臀舞" },
                 "video": "/videos/扭臀舞.mp4",
                 "badge": "NEW",
-                "count": "50K"
+                "count": "50K",
+                "url": "/video-effects/ai-twerk?type=Energetic"
               },
               {
                 "title": "AI 电摇舞",
                 "image": { "src": "/imgs/cms/Twerk_电摇舞_1.png", "alt": "AI 电摇舞" },
                 "video": "/videos/电摇舞.mp4",
-                "count": "45K"
+                "count": "45K",
+                "url": "/video-effects/ai-twerk?type=Energetic"
               },
               {
                 "title": "AI 正常接吻",
                 "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png", "alt": "AI 接吻" },
                 "video": "/videos/正常接吻.mp4",
-                "count": "40K"
+                "count": "40K",
+                "url": "/video-effects/ai-kissing?type=Romantic"
               },
               {
                 "title": "印度女友接吻",
                 "image": { "src": "/imgs/cms/AI-Fake-Date_印度女友_1.png", "alt": "印度女友" },
                 "video": "/videos/AI_Kissing_印度女友.mp4",
-                "count": "35K"
+                "count": "35K",
+                "url": "/video-effects/ai-kissing?type=Romantic"
               },
               {
                 "title": "俄罗斯女友接吻",
                 "image": { "src": "/imgs/cms/AI-Fake-Date_俄罗斯女友_1.png", "alt": "俄罗斯女友" },
                 "video": "/videos/俄罗斯女友.mp4",
                 "badge": "HOT",
-                "count": "1.2M"
+                "count": "1.2M",
+                "url": "/video-effects/ai-kissing?type=Romantic"
               },
               {
                 "title": "街舞展示",
                 "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_2.png", "alt": "街舞" },
                 "video": "/videos/街舞.mp4",
-                "count": "25K"
+                "count": "25K",
+                "url": "/video-effects/ai-dance-pop"
               },
               {
                 "title": "侏罗纪奇遇",
                 "image": { "src": "/imgs/cms/AI-Fake-Date_女友约会_1.png", "alt": "侏罗纪" },
                 "video": "/videos/侏罗纪奇遇.mp4",
-                "count": "15K"
+                "count": "15K",
+                "url": "/video-effects/ai-fake-date"
               },
               {
                 "title": "登月漫步",
                 "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png", "alt": "登月漫步" },
                 "video": "/videos/登月漫步.mp4",
-                "count": "90K"
+                "count": "90K",
+                "url": "/video-effects/ai-dance-pop"
               },
               {
                 "title": "过年场景",
                 "image": { "src": "/imgs/cms/AI-Fake-Date_中国女友_1.png", "alt": "过年" },
                 "video": "/videos/过年场景.mp4",
-                "count": "66K"
+                "count": "66K",
+                "url": "/video-effects/ai-fake-date"
               },
               {
                 "title": "进入嘴巴特效",
                 "image": { "src": "/imgs/cms/Pregnant-AI_进入嘴巴_1.png", "alt": "进入嘴巴" },
                 "video": "/videos/进入嘴巴.mp4",
                 "badge": "HOT",
-                "count": "110K"
+                "count": "110K",
+                "url": "/video-effects/ai-jiggle"
               },
               {
                 "title": "360度旋转展示",
                 "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_1.png", "alt": "360旋转" },
                 "video": "/videos/AI_360_Rotation.mp4",
-                "count": "33K"
+                "count": "33K",
+                "url": "/video-effects/ai-muscle?type=360 View"
               }
             ]
           },
@@ -357,95 +372,110 @@
                 "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_美国女友_1.png", "alt": "虚拟约会原图" },
                 "image": { "src": "/imgs/cms/AI-Fake-Date_美国女友_2.png", "alt": "AI 虚拟约会" },
                 "badge": "NEW",
-                "count": "50K"
+                "count": "50K",
+                "url": "/photo-effects/ai-fake-date?type=Cafe"
               },
               {
                 "title": "拥抱生成器",
                 "beforeImage": { "src": "/imgs/cms/Hug_拥抱_1.png", "alt": "拥抱原图" },
                 "image": { "src": "/imgs/cms/Hug_拥抱_2.png", "alt": "拥抱" },
                 "badge": "HOT",
-                "count": "200K"
+                "count": "200K",
+                "url": "/video-effects/ai-hug?type=Warm"
               },
               {
                 "title": "AI 怀孕特效",
                 "beforeImage": { "src": "/imgs/cms/Pregnant-AI_怀孕_1.png", "alt": "怀孕原图" },
                 "image": { "src": "/imgs/cms/Pregnant-AI_怀孕_2.png", "alt": "AI 怀孕" },
                 "badge": "HOT",
-                "count": "90K"
+                "count": "90K",
+                "url": "/photo-effects/pregnant-ai"
               },
               {
                 "title": "法式接吻",
                 "beforeImage": { "src": "/imgs/cms/AI-Kissing_法式接吻_1.png", "alt": "法式接吻原图" },
                 "image": { "src": "/imgs/cms/AI-Kissing_法式接吻_2.png", "alt": "法式接吻" },
                 "badge": "HOT",
-                "count": "1.5M"
+                "count": "1.5M",
+                "url": "/video-effects/ai-kissing?type=French%20Kiss"
               },
               {
                 "title": "额头之吻",
                 "beforeImage": { "src": "/imgs/cms/AI-Kissing_额头之吻_1.png", "alt": "额头之吻原图" },
                 "image": { "src": "/imgs/cms/AI-Kissing_额头之吻_2.png", "alt": "额头之吻" },
-                "count": "45K"
+                "count": "45K",
+                "url": "/video-effects/ai-kissing-cheek"
               },
               {
                 "title": "咬嘴唇之吻",
                 "beforeImage": { "src": "/imgs/cms/AI-Kissing_咬嘴唇之吻_1.png", "alt": "咬嘴唇原图" },
                 "image": { "src": "/imgs/cms/AI-Kissing_咬嘴唇之吻_2.png", "alt": "咬嘴唇" },
-                "count": "120K"
+                "count": "120K",
+                "url": "/video-effects/ai-kissing?type=French Kiss"
               },
               {
                 "title": "名人合拍",
                 "beforeImage": { "src": "/imgs/cms/AI-Selfie-with-Celebrities_名人合拍_1.png", "alt": "名人合拍原图" },
                 "image": { "src": "/imgs/cms/AI-Selfie-with-Celebrities_名人合拍_2.png", "alt": "名人合拍" },
                 "badge": "HOT",
-                "count": "2.1M"
+                "count": "2.1M",
+                "url": "/photo-effects/celebrity-selfie"
               },
               {
                 "title": "公主抱",
                 "beforeImage": { "src": "/imgs/cms/Hug_公主抱_1.png", "alt": "公主抱原图" },
                 "image": { "src": "/imgs/cms/Hug_公主抱_2.png", "alt": "公主抱" },
-                "count": "75K"
+                "count": "75K",
+                "url": "/photo-effects/princess-hug"
               },
               {
                 "title": "背后环抱",
                 "beforeImage": { "src": "/imgs/cms/Hug_背后环抱_1.png", "alt": "背后环抱原图" },
                 "image": { "src": "/imgs/cms/Hug_背后环抱_2.png", "alt": "背后环抱" },
-                "count": "88K"
+                "count": "88K",
+                "url": "/video-effects/ai-hug?type=Reunion"
               },
               {
                 "title": "托举式抱",
                 "beforeImage": { "src": "/imgs/cms/Hug_托举式抱_1.png", "alt": "托举式抱原图" },
                 "image": { "src": "/imgs/cms/Hug_托举式抱_2.png", "alt": "托举式抱" },
-                "count": "54K"
+                "count": "54K",
+                "url": "/video-effects/ai-hug?type=Warm"
               },
               {
                 "title": "日本女友",
                 "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_日本女友_1.png", "alt": "日本女友原图" },
                 "image": { "src": "/imgs/cms/AI-Fake-Date_日本女友_2.png", "alt": "日本女友" },
-                "count": "130K"
+                "count": "130K",
+                "url": "/photo-effects/ai-fake-date"
               },
               {
                 "title": "法国女友",
                 "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_法国女友_1.png", "alt": "法国女友原图" },
                 "image": { "src": "/imgs/cms/AI-Fake-Date_法国女友_2.png", "alt": "法国女友" },
-                "count": "95K"
+                "count": "95K",
+                "url": "/photo-effects/french-girlfriend"
               },
               {
                 "title": "中国女友",
                 "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_中国女友_1.png", "alt": "中国女友原图" },
                 "image": { "src": "/imgs/cms/AI-Fake-Date_中国女友_2.png", "alt": "中国女友" },
-                "count": "210K"
+                "count": "210K",
+                "url": "/photo-effects/chinese-girlfriend"
               },
               {
                 "title": "360度肌肉展示",
                 "beforeImage": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_1.png", "alt": "360肌肉原图" },
                 "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png", "alt": "360肌肉" },
-                "count": "15K"
+                "count": "15K",
+                "url": "/video-effects/ai-muscle?type=360 View"
               },
               {
                 "title": "脸颊之吻",
                 "beforeImage": { "src": "/imgs/cms/AI-Kissing_脸颊之吻_1.png", "alt": "脸颊之吻原图" },
                 "image": { "src": "/imgs/cms/AI-Kissing_脸颊之吻_2.png", "alt": "脸颊之吻" },
-                "count": "42K"
+                "count": "42K",
+                "url": "/video-effects/ai-kissing-cheek"
               }
             ]
           }
