--- a/src/config/locale/messages/en/pages/tools.json
+++ b/src/config/locale/messages/en/pages/tools.json
@@ -81,5 +81,18 @@
         ]
       }
     }
+  },
+  "sidebar": {
+    "home": "Home",
+    "discover": "Discover",
+    "discover_desc": "Browse all effects",
+    "ai_image": "AI IMAGE",
+    "ai_style": "AI Style",
+    "text_to_image": "Text to Image",
+    "image_to_image": "Image to Image",
+    "ai_video": "AI VIDEO",
+    "text_to_video": "Text to Video",
+    "image_to_video": "Image to Video",
+    "gallery": "Gallery"
   }
 }
